# alman

./: CMakeLists.txt  README.md  req.md
src/: Alias.cpp  Alias.h  AliasGroup.cpp  AliasGroup.h  AliasStore.cpp  AliasStore.h  BashExporter.cpp  BashExporter.h  Displayable.h  ShellExporter.cpp  ShellExporter.h  ZshExporter.cpp  ZshExporter.h  exceptions.h  main.cpp
src/tui/: App.cpp  App.h  ListView.cpp  ListView.h  SearchBar.cpp  SearchBar.h  Terminal.cpp  Terminal.h  Widget.cpp  Widget.h
